fix: enable overflow on action button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,12 +63,14 @@ body {
     padding: 50px 70px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 }
 
 .registration-form .form-icon {
     text-align: center;
-    background-color: #5891ff;
+    background-color: #ff0000;
     border-radius: 50%;
     font-size: 40px;
     color: white;
@@ -90,7 +92,7 @@ body {
     padding: 10px 20px;
     font-size: 18px;
     font-weight: bold;
-    background-color: #5791ff;
+    background-color: #ff0000;
     border: none;
     color: white;
     margin-top: 20px;
@@ -122,7 +124,7 @@ body {
 .registration-form .social-icons a {
     font-size: 23px;
     margin: 0 3px;
-    color: #5691ff;
+    color: #ff0000;
     border: 1px solid;
     border-radius: 50%;
     width: 45px;
